Fix icon spacing

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -155,6 +155,7 @@ main .spinner .bounce2 {
 
 .job-action i {
   font-size: 1.5em;
+  margin-right: 0.3em;
 }
 
 .job-action:hover {
